2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_shootdown): If we encounter a capability designating
	the same object as CAP, skip it.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* list.h (list_insert_after): New function.
	(LIST_CLASS): Add above function to template.
	
	(LIST_CLASS_TYPE): New macro.
	(LIST_CLASS): Take additional argument need_type.  If false, don't
	generate a type declaration.  Update users.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S (STACK_SIZE): Increase to 64 pages.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_for_each_inmemory_child): Add additional
	asserts.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (main): Update comment regarding fault handling for
	additional threads.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_policy_update): New declaration.
	* activity.c (children_list_insert_after): New function.
	(children_list_detach): Likewise.
	(activity_prepare): Use the above to insert ACTIVITY onto its
	parent's children list.  Keep the list is priority sorted order.
	(activity_deprepare): Likewise, but to remove ACTIVITY from its
	parent's children list.
	(activity_policy_update): New function.
	* server.c (server_loop): Use activity_policy_update to update an
	activity's policy.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): If CHILD and VICTIM have the same
	weight steal from the activity with the larger number of frames.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement activity_stats method.

	* ager.c (ager_loop): Implement first pass at updating available
	memory statistic.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c: Don't include <loader.h>.  Include <process-spawn.h>.
	(system_task_load): Just call process_spawn to load the task.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (system_task_load.alloc): Update alloc callback